# PureUpdater

./: .gdbinit-1051  .gdbinit-clion  .gitignore  .gitmodules  CMakeLists.txt  StartJLinkServer.sh  configure.sh  copy_to_pure.sh  load.sh  loadtest.sh  readme.md  run.sh  runtest.sh  sign_package.sh  uart_monitor.sh
cmake/config/: elftosb_wrapper.sh  imx_authenticated_hab.cmake_template
cmake/modules/: Board.cmake  GenerateConfigld.cmake  GenerateDocs.cmake  GenerateVersion.cmake  Version.cmake  rt1051.cmake  secure-boot.cmake  toolchain-arm-none-eabi.cmake
hal/: CMakeLists.txt
hal/include/hal/: blk_dev.h  boot_reason.h  console.h  delay.h  display.h  emmc.h  keyboard.h  security.h  system.h  tinyvfs.h
hal/include/hal/hwcrypt/: sha256.h  signature.h
hal/include/prv/hal/: i2c_dev.h
hal/include/prv/tinyvfs/: ext4_diskio.h  vfs_device.h  vfs_ext4.h  vfs_vfat.h
hal/src/: boot_reason.c  console.c  delay.c  hardfault.c  i2c_host.c  security.c  sysinit.c  system.c
hal/src/blkdev/: disks.c  partscan.c
hal/src/display/: ED028TC1.c  ED028TC1.h  LUT.h  display.c  font24.c
hal/src/hwcrypt/: sha256.c  signature.c
hal/src/keyboard/: TCA8418.c  keyboard.c
hal/src/tinyvfs/: tinyvfs.c  tinyvfs_mount.c
hal/src/tinyvfs/fs/: ext4_diskio.c  fat_diskio.c  lfs_diskio.c  vfs_ext4.c  vfs_littlefs.c  vfs_vfat.c
ldscripts/: libs.ld  memory.ld  sections.ld
luarecovery/: CMakeLists.txt  lgui.lua  lkeyboard.lua  lrecovery-1.0-1.rockspec  lrecovery.lua  lsys.lua
luarecovery/include/: lrecovery.h
luarecovery/src/: common.c  common.h  lbootctrl.c  lbootctrl.h  lgui.c  lgui.h  lkeyboard.c  lkeyboard.h  lrecovery.c  lsys.c  lsys.h
platform/: CMakeLists.txt
platform/boot/: clock_config.c  evkbimxrt1050_flexspi_nor_config.c  evkbimxrt1050_sdram_ini_dcd.c  fsl_flexspi_nor_boot.c  fsl_flexspi_nor_boot.h  pin_mux.c  startup_mimxrt1051.c  system_MIMXRT1051.c  xyz.c
platform/console/: console.c
platform/drivers/hab/: hab.c
platform/drivers/mcu/: fsl_dcp.c  fsl_flexram.c
platform/drivers/sdmmc/src/: fsl_mmc.c  fsl_sdmmc_common.c
platform/drivers/sdmmc/src/port/: fsl_sdmmc_event.c  fsl_sdmmc_event.h  fsl_sdmmc_host.c
platform/drivers/tinyvfs/: fat_system.c  lfs_diskio.c  tinyvfs.c  tinyvfs_mount.c
platform/drivers/tinyvfs/fs/: fat_diskio.c  vfs_littlefs.c  vfs_vfat.c
platform/hal/: delay.c  emmc.c  i2c_host.c  sysinit.c
platform/hal/blkdev/: disks.c  partscan.c
platform/hal/display/: ED028TC1.h  LUT.h  display.c  font24.c  fonts.h
platform/hal/keyboard/: TCA8418.h
platform/include/boot/: board.h  clock_config.h  pin_mux.h
platform/include/drivers/hab/: hab.h
platform/include/drivers/sdmmc/: fsl_mmc.h  fsl_sdmmc_host.h  fsl_sdmmc_spec.h
platform/include/hal/: blk_dev.h  delay.h  display.h  emmc.h  i2c_host.h  keyboard.h  sysinit.h  tinyvfs.h
platform/include/prv/blkdev/: blk_dev.h  partscan.h
platform/include/prv/tinyvfs/: lfs_diskio.h  vfs_device.h  vfs_littlefs.h  vfs_priv_data.h  vfs_vfat.h
platform/include/sys/: dirent.h  stat.h  statvfs.h  utime.h
platform/syscalls/: direntsyscalls.c  exit.c  fdsycalls.c  fnsyscalls.c  sbrk.c  syscalls.c  write.c
products/BellHybrid/: CMakeLists.txt
products/BellHybrid/gui/: CMakeLists.txt
products/BellHybrid/hal/: system.c
products/BellHybrid/ui_screens/: CMakeLists.txt  (+1 more)
products/PurePhone/: CMakeLists.txt
products/PurePhone/ui_screens/: CMakeLists.txt  ui_screens.c  ui_update_error.h  ui_update_in_progress.h  ui_update_success.h
recovery/: CMakeLists.txt  convert_fs.c  convert_fs.h  flash_bootloader.c  flash_bootloader.h  flash_secure_fuses.c  flash_secure_fuses.h  main.c
recovery/common/: CMakeLists.txt  database.h  dir_walker.c  dir_walker.h  log.c  log.h  match.h  mbr.c  mbr.h  mount_points.c  mount_points.h  path_opts.c  path_opts.h  sqlite3_vfs.h
recovery/security/: pgmkeys.c  pgmkeys.h
templates/: config.ld.template  version.h.template
tests/: CMakeLists.txt
tests/src/: test_suite_crypto.c  test_suite_crypto.h  test_suite_db.c  test_suite_db.h  test_suite_vfs.c  test_suite_vfs.h  unittests_main.c
unittest/: CMakeLists.txt  README.md  checksum_fixture.h  dir_fixture.cpp  dir_fixture.hpp  helper.cpp  helper.hpp  json_fixture.h  test_backup.cpp  test_checksum.cpp  test_dir_walk.cpp  test_file.cpp  test_json.cpp  test_tmp.cpp  test_trace.cpp  test_update.cpp  test_version.cpp
unittest/assets/: README.md  test_version.json
updater/: CMakeLists.txt  main.c  main_trace.c  main_trace.h  print_clocks.c  updater.c
updater/common/: CMakeLists.txt  match.c  match.h  path_opts.c  tar.c  tar.h
updater/common/common/: boot_files.c  boot_files.h  database.c  enum_s.h  json.c  json.h  json_priv.c  json_priv.h  log.c  log.h  match.c  match.h  path_opts.c  path_opts.h  sqlite3_vfs.c  sqlite3_vfs.h  status_json.c  status_json.h  tar.c  tar.h  trace.c  trace.h  types.h  ui_screens.c  ui_screens.h  ui_update_in_progress.h  version_json.c  version_json.h  version_json_priv.c  version_json_priv.h
updater/log/: error.c  error.h  trace.c  trace.h
updater/luamodules/: CMakeLists.txt
updater/luamodules/luamodules/ldelay/: ldelay-1.0-1.rockspec  ldelay.c  ldelay.h
updater/luamodules/luamodules/lgui/: lgui-1.0-1.rockspec  lgui.c  lgui.h
updater/luamodules/luamodules/lsysboot/: lsysboot-1.0-1.rockspec  lsysboot.c  lsysboot.h  lsysboot.lua
updater/luamodules/luamodules/lsyspaths/: lsyspaths-1.0-1.rockspec  lsyspaths.c  lsyspaths.h  lsyspaths.lua
updater/procedure/backup/: backup.c  backup.h  dir_walker.c  dir_walker.h  priv_backup.c  priv_backup.h
updater/procedure/checksum/: checksum.c  checksum.h  checksum_priv.c  checksum_priv.h  priv_checksum.c  priv_checksum.h
updater/procedure/factory/: factory.c  factory.h
updater/procedure/package_update/: priv_tmp.c  priv_tmp.h  priv_update.c  priv_update.h  priv_update_ecoboot.c  priv_update_ecoboot.h  update.c  update.h  update_ecoboot.c  update_ecoboot.h
updater/procedure/pgmkeys/: pgmkeys.c  pgmkeys.h
updater/procedure/security/: pgmkeys.c  pgmkeys.h
updater/procedure/version/: version.c  version.h  version_priv.c  version_priv.h
(+18 files in other folders)
